# compliance-control-mapper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
compliance_mapper/: __init__.py  cli.py  data.py  mapper.py  report.py  search.py
data/: cis_v8.json  iso27001_2022.json  mappings.json  nist_csf_2.json  soc2_tsc.json
tests/: test_cli.py  test_data.py  test_mapper.py  test_search.py
