[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-control-mapper"
version = "1.0.0"
description = "Crosswalk CLI that maps security controls across ISO 27001:2022, NIST CSF 2.0, CIS Controls v8, and SOC 2 TSC."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aslam Ahamed", email = "aslamahamed47@gmail.com"}
]
keywords = [
    "compliance", "grc", "iso27001", "nist-csf", "cis-controls",
    "soc2", "security", "audit", "crosswalk", "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/intruderfr/compliance-control-mapper"
Issues = "https://github.com/intruderfr/compliance-control-mapper/issues"

[project.scripts]
compliance-mapper = "compliance_mapper.cli:main"

[tool.setuptools]
packages = ["compliance_mapper"]
include-package-data = true

[tool.setuptools.package-data]
compliance_mapper = []

[tool.setuptools.data-files]
"share/compliance_mapper/data" = [
    "data/iso27001_2022.json",
    "data/nist_csf_2.json",
    "data/cis_v8.json",
    "data/soc2_tsc.json",
    "data/mappings.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
